--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-		"start": "npm run build && node ./dist/index.js",
+    "start": "npm run build && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/kdidenko/-tabsaver-accounts.git"
-	},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kdidenko/-tabsaver-accounts.git"
+  },
   "keywords": [
     "micro",
     "service",
@@ -25,10 +25,12 @@
   "author": "Kostyantyn Didenko <kdidenko@gmail.com>",
   "license": "GPL-3.0",
   "dependencies": {
+    "@types/md5": "^2.1.32",
     "@types/mocha": "^2.2.44",
     "@types/node": "^8.0.50",
     "config": "^1.27.0",
     "express": "^4.16.2",
+    "md5": "^2.2.1",
     "mongoose": "^4.13.0"
   },
   "devDependencies": {
