--- a/package.json
+++ b/package.json
@@ -34,6 +34,14 @@
     "mongoose": "^4.13.0"
   },
   "devDependencies": {
-    "jslint": "^0.11.0"
+    "browserify": "^14.5.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.3",
+    "gulp-util": "^3.0.8",
+    "jslint": "^0.11.0",
+    "tsify": "^3.0.3",
+    "typescript": "^2.6.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   }
 }
